--- a/src/pages/blog.html
+++ b/src/pages/blog.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Project</title>
+    <title>Блог</title>
     <link rel="stylesheet" href="../../public/styles/reset.css">
     <link rel="stylesheet" href="../../public/styles/main_new.css">
 </head>
