init add mob insta

--- a/src/pages/contacts.html
+++ b/src/pages/contacts.html
@@ -164,6 +164,31 @@
                         
                     </div>
 
+                    <div class="instagram-block-mobile">
+                        <div class="insta-row">
+                            <div class="insta-post ">
+                                <img src="../../public/assets/images/img.png" alt="Instagram пост 1">
+                            </div>
+                            <div class="insta-post ">
+                                <img src="../../public/assets/images/img-1.png" alt="Instagram пост 1">
+                            </div>
+                        </div>
+
+                        <div class="insta-post large">
+                            <img src="../../public/assets/images/img-2.png" alt="Instagram пост 4">
+                        </div>
+
+                        <div class="insta-row">
+                            <div class="insta-post ">
+                                <img src="../../public/assets/images/img-3.png" alt="Instagram пост 1">
+                            </div>
+                            <div class="insta-post ">
+                                <img src="../../public/assets/images/img-4.png" alt="Instagram пост 1">
+                            </div>
+                        </div>
+                        
+                    </div>
+
                     <div class="insta-btn-mobile">
                         <a href="#" class="btn btn-black-outline">перейти</a>
                     </div>
