--- a/src/pages/all_publications_our_partners.html
+++ b/src/pages/all_publications_our_partners.html
@@ -55,7 +55,7 @@
                                 </svg>
                         </div>
                         
-                        <input type="text" class="search-input" placeholder="Введите запрос">
+                        <input type="text" class="search-input" placeholder="поиск по катологу">
                         
                     </div>
                     <div class="close-btn-search">
