--- a/src/pages/open_article2.html
+++ b/src/pages/open_article2.html
@@ -52,7 +52,7 @@
                                 </svg>
                         </div>
                         
-                        <input type="text" class="search-input" placeholder="Введите запрос">
+                        <input type="text" class="search-input" placeholder="поиск по катологу">
                         
                     </div>
                     <div class="close-btn-search">
