--- a/src/pages/archive.html
+++ b/src/pages/archive.html
@@ -6,6 +6,8 @@
     <title>Архив</title>
     <link rel="stylesheet" href="../../public/styles/reset.css">
     <link rel="stylesheet" href="../../public/styles/main_new.css">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+    <link rel="icon" href="../../public/assets/images/logogreen.ico" type="image/x-icon">
 </head>
 <body>
     <header>
