init add new adaptive and fonts

--- a/src/pages/blog.html
+++ b/src/pages/blog.html
@@ -118,8 +118,9 @@
             <div class="container blog">
                 <div class="blog-cards-list">
                     <div class="blog-card-item standart">
-                        <div class="blog-card-img">
-                            <img src="../../public/assets/images/img/square.png" alt="">
+                        <a href="./open_article.html" class="block-item-href"></a>
+                        <div class="blog-card-img" style="background-image: url('../../public/assets/images/img/square.png');">
+                            <!-- <img src="../../public/assets/images/img/square.png" alt=""> -->
                         </div>
                         <div class="blog-card-date">
                             22.05.2024
@@ -137,6 +138,7 @@
                         <a href="./open_article.html" class="btn btn-default btn-black">ЧИТАТЬ <img src="../../public/assets/images/btn-arrow-black.svg" alt="" class="icon"></a>
                     </div>
                     <div class="blog-card-item standart">
+                        <a href="./open_article.html" class="block-item-href"></a>
                         <div class="blog-card-img">
                             <img src="../../public/assets/images/img/square-1.png" alt="">
                         </div>
@@ -156,6 +158,7 @@
                         <a href="./open_article.html" class="btn btn-default btn-black">ЧИТАТЬ <img src="../../public/assets/images/btn-arrow-black.svg" alt="" class="icon"></a>
                     </div>
                     <div class="blog-card-item standart">
+                        <a href="./open_article.html" class="block-item-href"></a>
                         <div class="blog-card-img">
                             <img src="../../public/assets/images/img/square-2.png" alt="">
                         </div>
@@ -175,6 +178,7 @@
                         <a href="./open_article.html" class="btn btn-default btn-black">ЧИТАТЬ <img src="../../public/assets/images/btn-arrow-black.svg" alt="" class="icon"></a>
                     </div>
                     <div class="blog-card-item standart">
+                        <a href="./open_article.html" class="block-item-href"></a>
                         <div class="blog-card-img">
                             <img src="../../public/assets/images/img/square.png" alt="">
                         </div>
@@ -194,6 +198,7 @@
                         <a href="./open_article.html" class="btn btn-default btn-black">ЧИТАТЬ <img src="../../public/assets/images/btn-arrow-black.svg" alt="" class="icon"></a>
                     </div>
                     <div class="blog-card-item standart">
+                        <a href="./open_article.html" class="block-item-href"></a>
                         <div class="blog-card-img">
                             <img src="../../public/assets/images/img/square-1.png" alt="">
                         </div>
@@ -341,6 +346,7 @@
                 
                 <div class="blog-cards-list">
                     <div class="blog-card-item standart">
+                        <a href="./open_article.html" class="block-item-href"></a>
                         <div class="blog-card-img">
                             <img src="../../public/assets/images/img/square.png" alt="">
                         </div>
@@ -360,6 +366,7 @@
                         <a href="./open_article.html" class="btn btn-default btn-black">ЧИТАТЬ <img src="../../public/assets/images/btn-arrow-black.svg" alt="" class="icon"></a>
                     </div>
                     <div class="blog-card-item standart">
+                        <a href="./open_article.html" class="block-item-href"></a>
                         <div class="blog-card-img">
                             <img src="../../public/assets/images/img/square-1.png" alt="">
                         </div>
@@ -379,6 +386,7 @@
                         <a href="./open_article.html" class="btn btn-default btn-black">ЧИТАТЬ <img src="../../public/assets/images/btn-arrow-black.svg" alt="" class="icon"></a>
                     </div>
                     <div class="blog-card-item standart">
+                        <a href="./open_article.html" class="block-item-href"></a>
                         <div class="blog-card-img">
                             <img src="../../public/assets/images/img/square-2.png" alt="">
                         </div>
@@ -398,6 +406,7 @@
                         <a href="./open_article.html" class="btn btn-default btn-black">ЧИТАТЬ <img src="../../public/assets/images/btn-arrow-black.svg" alt="" class="icon"></a>
                     </div>
                     <div class="blog-card-item standart">
+                        <a href="./open_article.html" class="block-item-href"></a>
                         <div class="blog-card-img">
                             <img src="../../public/assets/images/img/square.png" alt="">
                         </div>
@@ -417,6 +426,7 @@
                         <a href="./open_article.html" class="btn btn-default btn-black">ЧИТАТЬ <img src="../../public/assets/images/btn-arrow-black.svg" alt="" class="icon"></a>
                     </div>
                     <div class="blog-card-item standart">
+                        <a href="./open_article.html" class="block-item-href"></a>
                         <div class="blog-card-img">
                             <img src="../../public/assets/images/img/square-1.png" alt="">
                         </div>
@@ -623,6 +633,7 @@
                 
                 <div class="blog-cards-list">
                     <div class="blog-card-item standart">
+                        <a href="./open_article.html" class="block-item-href"></a>
                         <div class="blog-card-img">
                             <img src="../../public/assets/images/img/square.png" alt="">
                         </div>
@@ -642,6 +653,7 @@
                         <a href="./open_article.html" class="btn btn-default btn-black">ЧИТАТЬ <img src="../../public/assets/images/btn-arrow-black.svg" alt="" class="icon"></a>
                     </div>
                     <div class="blog-card-item standart">
+                        <a href="./open_article.html" class="block-item-href"></a>
                         <div class="blog-card-img">
                             <img src="../../public/assets/images/img/square-1.png" alt="">
                         </div>
@@ -661,6 +673,7 @@
                         <a href="./open_article.html" class="btn btn-default btn-black">ЧИТАТЬ <img src="../../public/assets/images/btn-arrow-black.svg" alt="" class="icon"></a>
                     </div>
                     <div class="blog-card-item standart">
+                        <a href="./open_article.html" class="block-item-href"></a>
                         <div class="blog-card-img">
                             <img src="../../public/assets/images/img/square-2.png" alt="">
                         </div>
@@ -680,6 +693,7 @@
                         <a href="./open_article.html" class="btn btn-default btn-black">ЧИТАТЬ <img src="../../public/assets/images/btn-arrow-black.svg" alt="" class="icon"></a>
                     </div>
                     <div class="blog-card-item standart">
+                        <a href="./open_article.html" class="block-item-href"></a>
                         <div class="blog-card-img">
                             <img src="../../public/assets/images/img/square.png" alt="">
                         </div>
@@ -699,6 +713,7 @@
                         <a href="./open_article.html" class="btn btn-default btn-black">ЧИТАТЬ <img src="../../public/assets/images/btn-arrow-black.svg" alt="" class="icon"></a>
                     </div>
                     <div class="blog-card-item standart">
+                        <a href="./open_article.html" class="block-item-href"></a>
                         <div class="blog-card-img">
                             <img src="../../public/assets/images/img/square-1.png" alt="">
                         </div>
