init new feature

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -12,6 +12,7 @@
 <link rel="icon" href="../../public/assets/images/logogreen.ico" type="image/x-icon">
 </head>
 <body>
+
     <header class="w-banner white">
         <div class="container">
             <nav class="navbar">
@@ -85,7 +86,7 @@
             
         </div>
     </header>
-    <main class="w-banner">
+    <main class="w-banner" >
         <div class="overlay-body"></div>
 
         <section class="main_banner about">
@@ -183,6 +184,62 @@
             <div class="container">
                 <div class="two_sections g-30">
                     <div class="experts_list">
+                        <div class="experts_item">
+                            <div class="experts_item_banner">
+                                <img src="../../public/assets/images/card of expert1.png" alt="">
+                                <div class="experience top">
+                                    <div class="title">
+                                        4+
+                                    </div>
+                                    <div class="description regular-h3-raleway">
+                                        лет в сфере
+                                    </div>
+                                </div>
+                                <div class="experience bottom">
+                                    <div class="title">
+                                        Ксения Долгова
+                                    </div>
+                                    <div class="description regular-h3-raleway">
+                                        @dolgovaksenia
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="experts_item_info_list">
+                                <div class="experts_item_info_item">
+                                    <div class="title">
+                                        (01)
+                                    </div>
+                                    <div class="description regular-h3-raleway">
+                                        Диплом по парикхмахерскому искусству
+                                    </div>
+                                </div>
+                                <div class="experts_item_info_item">
+                                    <div class="title">
+                                        (02)
+                                    </div>
+                                    <div class="description regular-h3-raleway">
+                                        Множество свидетельств о повышении квалификации наращивания влос, калористики, уходы и востановление волос, парикхмахера стрижки и укладки
+                                    </div>
+                                </div>
+                                <div class="experts_item_info_item">
+                                    <div class="title">
+                                        (03)
+                                    </div>
+                                    <div class="description regular-h3-raleway">
+                                        Абсолютный чемпион России 2024г.Победитель гран-при третьего всероссийского чемпионата по наращиванию волос
+                                    </div>
+                                </div>
+                                <div class="experts_item_info_item">
+                                    <div class="title">
+                                        (04)
+                                    </div>
+                                    <div class="description regular-h3-raleway">
+                                        Первое место в номинации "наращивание на короткие волосы"
+                                    </div>
+                                </div>
+    
+                            </div>
+                        </div>
                         <div class="experts_item">
                             <div class="experts_item_banner">
                                 <img src="../../public/assets/images/card of expert1.png" alt="">
