--- a/src/pages/open_article.html
+++ b/src/pages/open_article.html
@@ -72,6 +72,12 @@
         </div>
     </header>
     <main>
+        <div class="popup-overlay" id="popupOverlay">
+            <div class="popup">
+              <button class="popup-close" id="closePopupBtn">&times;</button>
+              <h2>Ссылка успешно скопирована!</h2>
+            </div>
+          </div>
         <div class="overlay-body"></div>
         <section class="open_article">
             <div class="container">
@@ -100,7 +106,7 @@
                                     </div>
                                     
                                 </div>
-                                <a href="#" class="btn btn-black-outline">поделиться</a>
+                                <a href="#" class="btn btn-black-outline copy-link" data-link="сурсл">поделиться</a>
                             </div>
                             
                             <div class="articles-card-img" style="background-image: url('../../public/assets/images/img/image\ 23.png');">
